--- a/src/style.css
+++ b/src/style.css
@@ -1,96 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,300;1,400&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,900&family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,500&family=Poppins:ital,wght@0,200;0,400;0,600;1,100;1,200;1,300;1,400&family=Roboto:ital,wght@0,300;0,400;1,100;1,300&display=swap');
+
+* {
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
 body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background-color: rgba(236, 231, 231, 0.836);
 }
 
-.todo-form {
-  box-shadow: 0 4px 4px 4px rgba(216, 216, 216, 0.762);
-  border: 0.2px solid rgba(216, 216, 216, 0.762);
-  width: 80vw;
-  background: white;
-  margin-top: 10vh;
+.heading {
+  border-bottom: 3px solid rgb(223, 219, 219);
+  padding: 15px;
 }
 
-.title {
-  display: flex;
-  align-items: center;
-}
-
-h3 {
-  padding: 3% 0;
-  font-size: 1.2rem;
-  margin: 0;
-  color: rgb(119, 119, 119);
-  font-weight: 600;
-  width: 90.1%;
-}
-
-.input {
-  outline: none;
-  width: 90%;
-  border: none;
-  background: none;
-  font-style: italic;
-  font-size: 1.2rem;
-  padding: 2% 0;
-}
-
-.list {
-  display: flex;
-  flex-direction: column;
-  padding: 0;
-}
-
-.listItems {
-  width: 100vw;
-}
-
-.description {
-  display: flex;
-  align-items: center;
-  width: 70vw;
-}
-
-list li p {
-  display: flex;
-  justify-content: left;
-  width: 87%;
-}
-
-h3,
 input {
-  margin-left: 4% !important;
-}
-
-.list li {
-  padding: 16px;
-  border-bottom: 0.5px solid rgba(207, 207, 207, 0.762);
-  font-size: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-input.check {
-  width: 1rem;
-  height: 1rem;
-  margin-right: 2%;
-}
-
-.remove {
-  padding: 0;
-  height: 1rem;
-}
-
-.btn-clear-all {
-  width: 100%;
-  margin: 0;
-  padding: 2%;
-  text-align: center;
-  background: rgba(239, 239, 239, 0.887);
   border: none;
-  color: rgb(97, 97, 97);
-  font-size: 1rem;
+  outline: none;
+  font-size: 20px;
+}
+
+.save-todo {
+  width: 93%;
+  padding-left: 5px;
+}
+
+.checkbox-task {
+  width: 93%;
+  padding-left: 5px;
+}
+
+.checkbox-task.checked {
+  text-decoration: line-through;
+  color: blue;
+}
+
+.list-cont {
+  display: flex;
+}
+
+#enter-todo {
+  width: 100%;
+  font-style: italic;
+}
+
+.todolist {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10%;
+}
+
+.list-container {
+  background-color: white;
+  box-shadow: 10px 5px 10px 5px grey;
+  width: 50%;
+}
+
+.list-group {
+  border-bottom: 3px solid rgb(223, 219, 219);
+  padding: 20px;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.clear {
+  background-color: rgb(230, 224, 224);
+  padding: 5px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.bin {
+  float: right;
+  display: none;
+}
+
+.menu {
+  float: right;
+}
+
+.refresh {
+  float: right;
+}
+
+[contenteditable] {
+  outline: none;
+}
+
+.emptylist {
+  display: none;
+  color: red;
 }
