--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,11 @@
   width: 93%;
   padding-left: 5px;
 }
+.list-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 .checkbox-task.checked {
   text-decoration: line-through;
