--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
   width: 98%;
   margin: 24px 24px;
   background-color: bisque;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0 30px 60px -12px, rgba(0, 0, 0, 0.3) 0 18px 36px -18px;
 }
 
 .save-todo {
@@ -37,6 +37,7 @@
 .checkbox-task {
   padding-left: 5px;
 }
+
 .list-container {
   display: flex;
   width: 98%;
